--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "node-midi",
   "version": "0.0.0",
   "description": "",
-  "main": "midi.js",
+  "main": "app.js",
   "dependencies": {
+    "leapjs": "^0.6.4",
     "midi": "~0.9.0",
     "socket.io": "~1.0.3",
     "socket.io-client": "~1.0.4"
