--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "main": "app.js",
   "dependencies": {
     "leapjs": "^0.6.4",
-    "midi": "~0.9.0",
-    "socket.io": "~1.0.3",
-    "socket.io-client": "~1.0.4"
+    "midi": "~0.9.0"
   },
   "devDependencies": {},
   "scripts": {
