--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "dependencies": {
     "leapjs": "^0.6.4",
-    "midi": "~0.9.0"
+    "midi": "~0.9.0",
+    "serialport": "^4.0.6"
   },
   "devDependencies": {},
   "scripts": {
